[CodeCompletion] Guard for null interface type in calculateTypeRelationForDecl

Fixes a crash.

https://bugs.swift.org/browse/SR-8470
rdar://problem/43057054